# ics-agentic-soc-pipeline

./: .dockerignore  .env.example  .pre-commit-config.yaml  Concept.md  Dockerfile  LICENSE  README.md  demo.tape  docker-compose.yml  pyproject.toml  requirements.txt  sample_alert.json
.github/workflows/: test.yml
data/: alerts.jsonl  annotations.csv  telemetry.csv
data/chromadb/: chroma.sqlite3
data/rag_documents/: asset_inventory.md  iec62443_controls.md  past_incidents.md
data/test/: annotations.csv  telemetry.csv
data/train/: annotations.csv  telemetry.csv
docs/: AGENT_DESIGN.md  ANOMALY_DEFINITIONS.md  ARCHITECTURE.md  FEATURE_ENGINEERING.md  PRD.md  sample_data.csv
models/: isolation_forest.joblib  scaler.joblib
notebooks/: 01_anomaly_detection_baseline.ipynb  01_executed.ipynb  02_rag_evaluation.ipynb
outputs/: block_d6eab831-9db2-49f5-bcae-c3a2d0b34c15.rules  block_e8358fb5-101a-43ba-93cd-8f9b95e30ac6.rules  incident_d6eab831-9db2-49f5-bcae-c3a2d0b34c15.md  incident_e8358fb5-101a-43ba-93cd-8f9b95e30ac6.md  test_scan.json  test_write.json
scripts/: agent.py  detect_anomalies.py  generate_telemetry.py  ingest_rag.py  schedule.json  schedule_test.json  send_alerts.py  webhook_receiver.py
src/: features.py  rag.py
tests/: test_agent.py  test_rag.py  test_webhook.py
