[project]
name = "ics-agentic-soc-pipeline"
version = "1.0.0"
description = "ML anomaly detection → RAG enrichment → LLM agent (NIST reports + Suricata rules)"
authors = [{ name = "Liam Carvajal-Perez", email = "carvajalperezliam7@gmail.com" }]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "chromadb>=1.5.9",
    "fastapi>=0.136.3",
    "joblib>=1.4.0",
    "langchain>=1.3.9",
    "langchain-openai>=1.3.2",
    "openai>=2.41.1",
    "pandas>=2.2.0",
    "pydantic>=2.13.4",
    "pytest>=8.0.0",
    "python-dotenv>=1.2.2",
    "scikit-learn>=1.6.0",
    "sentence-transformers>=3.4.1",
    "uvicorn>=0.34.0",
]

[tool.ruff]
exclude = ["notebooks/*.ipynb", "venv"]

[tool.ruff.lint]
per-file-ignores = { "scripts/*.py" = ["E402"], "tests/*.py" = ["E402"] }

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
testpaths = ["tests"]
